--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 01:05:04 2018</p>
+         Last Run: Mon Jul 16 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>21</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
@@ -46,10 +46,10 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -58,9 +58,9 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
                         <td>0</td>
                      </tr>
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "22",
-                 "24",
-                 "30"
+                 "21",
+                 "23",
+                 "28"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 01:05:04 2018</p>
+         Last Run: Mon Jul 16 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -234,7 +234,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
@@ -258,11 +258,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>1</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -380,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
+                 "33",
                  "37",
-                 "43"
+                 "42"
                ]
              },
              {
@@ -392,7 +392,7 @@
                "data":[
                  "54",
                  "55",
-                 "54"
+                 "53"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 01:05:04 2018</p>
+         Last Run: Mon Jul 16 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -430,51 +430,51 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>42</td>
-                        <td>49</td>
-                        <td>3</td>
-                        <td>13</td>
-                        <td>SE</td>
+                        <td>Partly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>7</td>
                         <td>50</td>
+                        <td>3</td>
+                        <td>11</td>
+                        <td>SE</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>51</td>
                         <td>2</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>49</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>15</td>
+                        <td>24</td>
                         <td>52</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>58</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>24</td>
+                        <td>46</td>
                         <td>56</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>E</td>
-                        <td>60</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "22",
                  "22",
                  "22",
                  "21"
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "22",
                  "22",
                  "22",
                  "21"
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "42",
                  "7",
-                 "15",
-                 "24"
+                 "6",
+                 "24",
+                 "46"
                ]
              },
              {
@@ -597,7 +597,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
+                 "50",
                  "51",
                  "52",
                  "56"
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
                  "49",
-                 "58",
-                 "60"
+                 "51",
+                 "62",
+                 "66"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 01:05:04 2018</p>
+         Last Run: Mon Jul 16 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -649,63 +649,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>0</td>
-                        <td>52</td>
+                        <td>Partly Cloudy</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>22</td>
+                        <td>63</td>
                         <td>3</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>28</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>2</td>
-                        <td>47</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>23</td>
+                        <td>58</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>34</td>
+                        <td>NNW</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>4</td>
-                        <td>42</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>52</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>38</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>15</td>
-                        <td>40</td>
+                        <td>48</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>57</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>15</td>
-                        <td>40</td>
-                        <td>6</td>
+                        <td>46</td>
+                        <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>58</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -751,11 +751,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
+                 "15",
+                 "16",
                  "18",
                  "19",
-                 "20",
-                 "21"
+                 "19"
                ]
              },
              {
@@ -764,11 +764,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
+                 "15",
+                 "16",
                  "18",
                  "19",
-                 "20",
-                 "21"
+                 "19"
                ]
              }
            ]
@@ -821,9 +821,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "2",
-                 "4",
+                 "22",
+                 "23",
+                 "18",
                  "15",
                  "15"
                ]
@@ -833,11 +833,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "63",
+                 "58",
                  "52",
-                 "47",
-                 "42",
-                 "40",
-                 "40"
+                 "48",
+                 "46"
                ]
              },
              {
@@ -845,11 +845,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "34",
-                 "38",
-                 "57",
-                 "58"
+                 "43",
+                 "43",
+                 "43",
+                 "55",
+                 "48"
                ]
              }
            ]
