--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 04:05:07 2018</p>
+         Last Run: Mon Jul 16 05:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -46,7 +46,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
@@ -58,10 +58,10 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -181,8 +181,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "21",
-                 "24",
-                 "29"
+                 "23",
+                 "28"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 04:05:07 2018</p>
+         Last Run: Mon Jul 16 05:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -231,38 +231,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>32</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>52</td>
+                        <td>ESE</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>36</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
+                        <td>1</td>
+                        <td>43</td>
                         <td>0</td>
-                        <td>42</td>
-                        <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>E</td>
-                        <td>51</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,8 +306,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "29",
                  "28",
-                 "27",
                  "26"
                ]
              },
@@ -317,8 +317,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "29",
                  "28",
-                 "27",
                  "26"
                ]
              }
@@ -372,7 +372,7 @@
                "data":[
                  "0",
                  "0",
-                 "0"
+                 "1"
                ]
              },
              {
@@ -382,7 +382,7 @@
                "data":[
                  "32",
                  "36",
-                 "42"
+                 "43"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "55",
                  "52",
-                 "53",
-                 "51"
+                 "54"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 04:05:07 2018</p>
+         Last Run: Mon Jul 16 05:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -433,31 +433,31 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>6</td>
-                        <td>51</td>
+                        <td>9</td>
+                        <td>50</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>49</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>2</td>
-                        <td>52</td>
+                        <td>11</td>
+                        <td>51</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>17</td>
+                        <td>32</td>
                         <td>53</td>
                         <td>1</td>
                         <td>13</td>
@@ -469,12 +469,12 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>56</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "2",
-                 "17",
-                 "45"
+                 "9",
+                 "11",
+                 "32",
+                 "46"
                ]
              },
              {
@@ -597,8 +597,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "50",
                  "51",
-                 "52",
                  "53",
                  "56"
                ]
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
                  "50",
+                 "51",
                  "62",
-                 "66"
+                 "65"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 04:05:07 2018</p>
+         Last Run: Mon Jul 16 05:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
